# video-calling-app

./: .env  db.sqlite3  main.py  pyproject.toml  readme.md  requirements.txt  test.js  test_azure_speech.html  todo
base/: admin.py  consumers.py  models.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_roommember_preferred_language.py  0003_roommember_input_language.py
base/templates/base/: lobby.html  main.html  room.html
static/scripts/: chat.js  main.js
static/styles/: chat.css  main.css
videocallapp/: asgi.py  settings.py  wsgi.py
