[project]
name = "v-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agora-token-builder==1.0.0",
    "arrow==1.3.0",
    "asgiref==3.8.1",
    "attrs==25.1.0",
    "autobahn==24.4.2",
    "automat==24.8.1",
    "azure-cognitiveservices-speech==1.42.0",
    "binaryornot==0.4.4",
    "cachetools==5.5.2",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "channels==4.2.0",
    "channels-redis==4.2.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "cookiecutter==2.6.0",
    "cryptography==44.0.1",
    "daphne==4.1.2",
    "django==5.1.6",
    "django-browser-reload==1.18.0",
    "django-tailwind==3.8.0",
    "djangochannelsrestframework==1.3.0",
    "djangorestframework==3.15.2",
    "google-api-core==2.24.1",
    "google-auth==2.38.0",
    "google-cloud==0.34.0",
    "google-cloud-speech==2.31.0",
    "googleapis-common-protos==1.68.0",
    "grpcio==1.70.0",
    "grpcio-status==1.70.0",
    "gunicorn==23.0.0",
    "hyperlink==21.0.0",
    "idna==3.10",
    "incremental==24.7.2",
    "jinja2==3.1.5",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "msgpack==1.1.0",
    "packaging==24.2",
    "pip==24.2",
    "proto-plus==1.26.0",
    "protobuf==5.29.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.1",
    "pycparser==2.22",
    "pygments==2.19.1",
    "pyopenssl==25.0.0",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "pyyaml==6.0.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rsa==4.9",
    "service-identity==24.2.0",
    "setuptools==75.8.0",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "twisted==24.11.0",
    "txaio==23.1.1",
    "types-python-dateutil==2.9.0.20241206",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "websockets==15.0",
    "zope-interface==7.2",
]
